fixed issue with bachground not covering properly

--- a/style.css
+++ b/style.css
@@ -8,16 +8,13 @@ body,html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
 .hero-section {
     height: 44px;
     width: 59px;
     align-items: right;
-  }
+}
   
 .header1 h2{
- 
     height: 61px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 5vw;
@@ -63,6 +60,7 @@ body,html {
 #div-section-address {
   background-image: url('images/Bg-img-2.png');
   background-repeat: no-repeat!important;
+  background-size: cover;
   height: 100%;
   float: center;
 }
@@ -70,12 +68,14 @@ body,html {
 #div-section-form {
   background-image: url('images/bg-img.png');
   background-repeat: no-repeat!important;
+  background-size: cover;
   height: 100%;
 }
 
 #div-section-thanks {
   background-image: url('images/bg-img.png');
   background-repeat: no-repeat!important;
+  background-size: cover;
   height: 100%;
 }
 
